[package]
name = "webaudio-test1"
version = "0.1.0"
authors = ["et0485 <yevgen.bushuyev@evry.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
js-sys = "0.3.58"
cfg-if = "1.0.0"
log = "0.4.17"
console_log = { version = "0.2.0", optional = true }

futures = "0.3.21"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.31"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlInputElement',
    'HtmlImageElement',
    'MouseEvent',

    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'OscillatorNode',
    'OscillatorType',
    'AudioBufferSourceNode',
    'Window',
    'AudioBuffer',

    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "ReadableStream",
    "Response"
]
[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
